fix: spacing, layout

--- a/src/assets/scss/layout/_container.scss
+++ b/src/assets/scss/layout/_container.scss
@@ -1,5 +1,5 @@
 .container {
-  margin: 0;
+  margin: 40px 0;
   display: flex;
   flex-wrap: wrap;
   @include md {
